src/main/java/com/example/wineapi/global/error/exception/CustomException.java
package com.example.wineapi.global.error.exception;

import com.example.wineapi.global.error.ErrorCode;
import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class CustomException extends RuntimeException {
    private final ErrorCode errorCode;
}